<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/walkRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anim_background"
    android:padding="@dimen/activity_horizontal_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider">

        <com.fesskiev.mediacenter.widgets.pager.DisableSwipingViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.fesskiev.mediacenter.widgets.indicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            app:fillColor="@color/yellow"
            app:pageColor="@color/white"
            app:radius="5dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

    </FrameLayout>

    <View
        android:id="@+id/divider"
        style="@style/DividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/enterAppButton"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/enterAppButton"
        style="@style/ButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/button_enter" />

</RelativeLayout>
