...
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/cover" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/playback_controls_albumart_horizontal_margin"
        android:layout_toEndOf="@id/cover"
        android:layout_toStartOf="@+id/playPauseButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
