<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="permissions_text">Read external storage and audio record permissions are need to correctly app work</string>
    <string name="permission_granted">All permissions granted. Thank you</string>
    <string name="button_ok">OK</string>

    <string name="button_enter">Enter</string>

    <string name="search_media_files_title">You can search media files now or skip this step. Search now?</string>
    <string name="search_media_files_success">Searching files has been completed. Thank you</string>

    <string name="pro_user_text">You can open Cue file parser and Media Converter. Buy pro user futures?</string>
    <string name="ad_mob_remove_success">You are pro user. Thank you for support!</string>
...
    <string name="dialog_refresh_folders_title">Audio search</string>
    <string name="dialog_refresh_folders_message">Do you want to perform a full search for audio files?</string>

    <string name="dialog_refresh_video_title">Video search</string>
    <string name="dialog_refresh_video_message">Do you want to perform a full search for video files?</string>

    <string name="dialog_ok">YES</string>
    <string name="dialog_cancel">NO</string>

    <string name="context_menu_audio_details">Details</string>
    <string name="context_menu_audio_search_data">Album info search</string>
    <string name="context_menu_audio_delete">Delete folder</string>
    <string name="context_menu_video_delete">Delete video</string>
...
