<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoloPlayer Pro</string>

</resources>